--- a/lottery-web/src/main/resources/templates/register.html
+++ b/lottery-web/src/main/resources/templates/register.html
@@ -58,7 +58,7 @@
 					<h2>用户注册</h2>
 					<form>
 						<div class="form-group" v-if="inviteRegisterFlag">
-							<label>邀请码:</label> <input type="text" class="form-control" v-model="inviteCode">
+							<label>邀请码:</label> <input type="text" class="form-control" v-model="inviteCode" :disabled="inviteCodeReadonlyFlag">
 						</div>
 						<div class="form-group">
 							<label>用户名:</label> <input type="text" class="form-control" placeholder="以字母开头,长度为6-12个字母和数字!" v-model="userName">
@@ -101,6 +101,7 @@
 				inviteRegisterFlag : false,
 				registerSuccessFlag : false,
 				inviteCode : '',
+				inviteCodeReadonlyFlag : false,
 				userName : '',
 				realName : '',
 				password : '',
@@ -108,6 +109,11 @@
 			},
 			computed : {},
 			created : function() {
+				var inviteCode = window.sessionStorage.getItem('inviteCode');
+				if (inviteCode != null) {
+					this.inviteCode = inviteCode;
+					this.inviteCodeReadonlyFlag = true;
+				}
 				this.loadInviteRegisterSetting();
 			},
 			methods : {
