--- a/lottery-web/src/main/resources/templates/personal-center.html
+++ b/lottery-web/src/main/resources/templates/personal-center.html
@@ -127,36 +127,36 @@
 			<div v-show="currentTab == 'accountChange'">
 				<form class="form-inline common-query-cond-form">
 					<div class="form-group common-query-cond">
-						<label>游戏:</label> <select class="form-control" v-model="accountChangeGameCode">
+						<label>游戏:</label> <select class="form-control-sm" v-model="accountChangeGameCode">
 							<option value="">所有游戏</option>
 							<option v-for="dictItem in gameDictItems" :value="dictItem.dictItemCode">{{dictItem.dictItemName}}</option>
 						</select>
 					</div>
 					<div class="form-group common-query-cond">
-						<label>时间:</label><input type="date" class="form-control" v-model="accountChangeStartTime"><span>到</span><input type="date" class="form-control" v-model="accountChangeEndTime">
+						<label>时间:</label><input type="date" class="form-control-sm" v-model="accountChangeStartTime"><span>到</span><input type="date" class="form-control-sm" v-model="accountChangeEndTime">
 					</div>
 					<div class="form-group common-query-cond">
-						<label>账变类型:</label> <select class="form-control" v-model="accountChangeTypeCode">
+						<label>账变类型:</label> <select class="form-control-sm" v-model="accountChangeTypeCode">
 							<option value="">请选择</option>
 							<option v-for="dictItem in accountChangeTypeDictItems" :value="dictItem.dictItemCode">{{dictItem.dictItemName}}</option>
 						</select>
 					</div>
-					<button type="button" class="btn btn-danger" v-on:click="refreshAccountChangeTable">搜索</button>
+					<button type="button" class="btn btn-danger btn-sm" v-on:click="refreshAccountChangeTable">搜索</button>
 				</form>
 				<table class="common-table account-change-table"></table>
 			</div>
 			<div v-show="currentTab == 'rechargeWithdraw'">
 				<form class="form-inline common-query-cond-form">
 					<div class="form-group common-query-cond">
-						<label>充值或提现:</label> <select class="form-control" v-model="rechargeWithdrawOrderType">
+						<label>充值或提现:</label> <select class="form-control-sm" v-model="rechargeWithdrawOrderType">
 							<option value="">请选择</option>
 							<option v-for="dictItem in rechargeWithdrawOrderTypeDictItems" :value="dictItem.dictItemCode">{{dictItem.dictItemName}}</option>
 						</select>
 					</div>
 					<div class="form-group common-query-cond">
-						<label>时间:</label><input type="date" class="form-control" v-model="rechargeWithdrawStartTime"><span>到</span><input type="date" class="form-control" v-model="rechargeWithdrawEndTime">
+						<label>时间:</label><input type="date" class="form-control-sm" v-model="rechargeWithdrawStartTime"><span>到</span><input type="date" class="form-control-sm" v-model="rechargeWithdrawEndTime">
 					</div>
-					<button type="button" class="btn btn-danger" v-on:click="refreshRechargeWithdrawTable">搜索</button>
+					<button type="button" class="btn btn-danger btn-sm" v-on:click="refreshRechargeWithdrawTable">搜索</button>
 				</form>
 				<table class="common-table recharge-withdraw-table"></table>
 			</div>
